--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,27 @@
 .contactStyle {
-  max-width: 25%;
+  max-width: 40%;
 }
 
 .contactsContainer {
   display: grid;
   grid-template-columns: auto auto auto auto;
+  padding: 1.5%;
+  grid-row-gap: 15%;
+}
+
+.contentActions {
+  display: flex;
+  justify-content: center;
+  padding: 5%;
+}
+
+.contentActions button {
+  margin: 2%;
+}
+
+.title {
+  text-align: center;
+  padding: 1%;
 }
 
 .formContainer {
