--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,6 +12,7 @@
             [(ngModel)]="userInfo.email"
             type="text"
             name="email"
+            [email]="true"
           />
         </mat-form-field>
         <mat-form-field class="full-width">
