--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,6 +13,7 @@
             name="email"
             required
             [(ngModel)]="newUser.email"
+            [email]="true"
           />
         </mat-form-field>
         <mat-form-field class="full-width">
